# fastApi-learn

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: initial_data.py  main.py
app/api/: deps.py  router_base.py
app/core/: config.py  security.py
app/crud/: __init__.py  category_crud.py  crud_base.py  image_crud.py  order_crud.py  order_item_crud.py  product_crud.py  profile_crud.py  role_crud.py  user_crud.py
app/data/: categories.json  products.json
app/db/: init_db.py  session.py
app/dependencies/: common_deps.py  image_deps.py  order_deps.py  profile_deps.py  user_deps.py
app/models/: __init__.py  base_model.py  category_model.py  discount_model.py  image_model.py  order_history_model.py  order_item_model.py  order_items_model.py  order_model.py  product_model.py  profile_model.py  review_model.py  role_model.py  user_model.py
app/pages/: client.py
app/schemas/: __init__.py  category_schema.py  common_schema.py  image_schema.py  order_items_schema.py  order_schema.py  product_schema.py  profile_schema.py  role_schema.py  user_schema.py
app/services/: image_service.py  order_service.py
app/static/: styles.css
app/templates/: authentication.html  base.html  card.html  footer.html  header.html  login.html  products.html  profile.html  register.html
app/tests/: conftest.py  user_test.py
app/utils/: image_functions.py  phone_type.py
migrations/: env.py
migrations/versions/: 2023_10_19_1754-c164ed9e82f0_add_models.py  2023_10_19_2050-7b13ca6ef17e_update_user_model.py  2023_10_22_1508-909aa6b4aca8_add_role.py  2023_10_24_1051-be19b6d68841_add_user_role_user_is_superuser.py  2023_10_25_1548-7f13374faa52_remove_the_relationship_between_user_.py  2023_10_25_1606-2b2cb02c83c3_add_profile.py  2023_10_25_1633-c308228b7b0e_review_to_profile.py  (+15 more)
tests/: conftest.py
(+26 files in other folders)
